fixed build path for binary plugin import of telecom bundles

--- a/it.polito.elite.dog.drivers.zigbee.energyandpowermeter/build.properties
+++ b/it.polito.elite.dog.drivers.zigbee.energyandpowermeter/build.properties
@@ -4,3 +4,4 @@ bin.includes = META-INF/,\
                OSGI-INF/component.xml,\
                OSGI-INF/
 source.. = src/
+jars.extra.classpath = platform:/plugin/it.telecomitalia.osgi.ah.hac.lib/it.telecomitalia.osgi.ah.hac.lib_3.1.2.jar
