--- a/it.polito.elite.dog.drivers.zigbee.network/build.properties
+++ b/it.polito.elite.dog.drivers.zigbee.network/build.properties
@@ -2,5 +2,7 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/component.xml,\
-               OSGI-INF/
+               OSGI-INF/,\
+               bin/
 source.. = src/
+jars.extra.classpath = platform:/plugin/it.telecomitalia.osgi.ah.hac.lib/it.telecomitalia.osgi.ah.hac.lib_3.1.2.jar
