--- a/it.polito.elite.dog.drivers.zigbee.onoffdevice/build.properties
+++ b/it.polito.elite.dog.drivers.zigbee.onoffdevice/build.properties
@@ -1,5 +1,8 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/component.xml
+               OSGI-INF/component.xml,\
+               OSGI-INF/,\
+               bin/
 source.. = src/
+jars.extra.classpath = platform:/plugin/it.telecomitalia.osgi.ah.hac.lib/it.telecomitalia.osgi.ah.hac.lib_3.1.2.jar
