added prefs to git ignore, moved the driver in the right place

--- a/it.polito.elite.dog.drivers.zigbee.doorwindowsensor/.project
+++ b/it.polito.elite.dog.drivers.zigbee.doorwindowsensor/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>it.polito.elite.dog.drivers.zigbee.doorsensor</name>
+	<name>it.polito.elite.dog.drivers.zigbee.doorwindowsensor</name>
 	<comment></comment>
 	<projects>
 	</projects>
