Updated version numbers

--- a/it.polito.elite.dog.drivers.zigbee.meterbridge/build.properties
+++ b/it.polito.elite.dog.drivers.zigbee.meterbridge/build.properties
@@ -1,5 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               OSGI-INF/meterbridge.xml
+               OSGI-INF/meterbridge.xml,\
+               OSGI-INF/
 source.. = src/
